# Assignment-2-TGC

image-segmentation/src/: CMakeLists.txt  ift_segmentation.cpp  ift_segmentation.h  main.cpp  mst_segmentation.cpp  mst_segmentation.h
